Update index document ready

--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
   <link rel="icon" href="img/favicon.ico">  
 
   <title>St. Helen's Church</title>
+
+  <script>
+    $(document).ready(function(){
+      $.get('https://www.churchofengland.org/prayer-and-worship/join-us-service-daily-prayer', function(html) {
+        
+      });
+    });
+  </script>
 </head>
 
 <body>
