--- a/index.html
+++ b/index.html
@@ -425,11 +425,14 @@
     crossorigin="anonymous"></script>
 
   <script>
-    $(document).ready(function(){
+    (function(){
+      var load = function() {
       $.get('https://www.churchofengland.org/prayer-and-worship/join-us-service-daily-prayer', function(html) {
-        
-      });
-    });
+              
+            });
+      };
+      window.onload = load;
+    })();    
   </script>    
 
 </body>
