--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           </div>
         </div>
 
-        <div><iframe src="https://player.captivate.fm/episode/6fae7841-6abb-4f98-aca9-bb9c9fb06925" style="width: 100%;height:200px"></iframe></div>
+        <div><iframe src="https://player.captivate.fm/episode/e13b507e-ade0-45f5-88a3-3ab9162d17a3" style="width: 100%;height:200px"></iframe></div>
 
 
         <hr/>
@@ -431,7 +431,7 @@
       var load = function() {
 
       };
-      window.onload = load;
+      //window.onload = load;
     })();    
   </script>    
 
