--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 
 <body>
   <div class="container">
-    <img src="img/header.jpg" class="img-fluid" alt="header logo" />
+    <!--<img src="img/header.jpg" class="img-fluid" alt="header logo" />-->
+    <img src="img/RemembranceBanner.jpg" class="img-fluid" alt="header logo" />
   </div>
 
   <div id="primary-nav">
