--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <!-- Custom styles-->
   <link href="styles.css" rel="stylesheet">
 
+  <script src="jquery-3.7.1.min.js"></script>
+
   <!-- favicons -->
   <link rel="icon" href="img/favicon-32x32.png" sizes="32x32" type="image/png">
   <link rel="icon" href="img/favicon-16x16.png" sizes="16x16" type="image/png">
@@ -401,12 +403,9 @@
     crossorigin="anonymous"></script>
 
   <script>
-    (function(){
-      var load = function() {
-
-      };
-      //window.onload = load;
-    })();    
+    $(document).ready(function(){
+      
+    }); 
   </script>    
 
 </body>
