Update script tag

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Custom styles-->
   <link href="styles.css" rel="stylesheet">
 
-  <script src="jquery-3.7.1.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
   <!-- favicons -->
   <link rel="icon" href="img/favicon-32x32.png" sizes="32x32" type="image/png">
