--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
 
   <script>
     $(document).ready(function(){
-      $('iframe#captivate').load(function(){
+      $('#captivate').load(function(){
         console.log('captivate loaded.');
       });
     }); 
