--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
   <script>
     $(document).ready(function(){
       $('#captivate').load(function(){
-        console.log('captivate loaded.');
+        //console.log('captivate loaded.');
       });
     }); 
   </script>    
