--- a/index.html
+++ b/index.html
@@ -404,8 +404,9 @@
 
   <script>
     $(document).ready(function(){
-      $('#captivate').on( "load", function() {
-        console.log('iframe loaded')
+      $('#captivate').on("load", function() {
+        console.log('iframe loaded');
+        $('.player-heading').css( "color", "black" );
       });
     }); 
   </script>    
