--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
 
 <body>
   <div class="container">
-    <!--<img src="img/header.jpg" class="img-fluid" alt="header logo" />-->
-    <img src="img/RemembranceBanner.jpg" class="img-fluid" alt="header logo" />
+    <img src="img/header.jpg" class="img-fluid" alt="header logo" />
   </div>
 
   <div id="primary-nav">
@@ -128,22 +127,7 @@
         <div><iframe id="captivate" src="https://player.captivate.fm/show/202a879f-8015-49a7-bf0d-1e8ae15cbe0a/latest/" style="width: 100%;height:200px"></iframe></div>
 
 
-        <hr/>  
-             
-
-        <div class="card mb-3">
-          <div class="row g-0">
-            <div class="col-md-3">
-              <img src="img/Poppies.jpg" class="img-fluid rounded" alt="image">
-            </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h5 class="card-title">Sunday 9th November 10:15 AM - Remembrance Sunday (Parish Eucharist)</h5>
-                <p class="card-text">Please join us as we commemorate the contribution of British and Commonwealth military and civilian servicemen and women in the two World Wars and later conflicts. There will be an Act of Remembrance at 11:00.</p>
-              </div>
-            </div>
-          </div>
-        </div>        
+        <hr/>       
         
         <div class="card mb-3">
           <div class="row g-0">
