--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Thursday 25th December Time 10:15 PM - Christmas Morning Eucharist</h5>
+                <h5 class="card-title">Thursday 25th December Time 10:15 AM - Christmas Morning Eucharist</h5>
                 <p class="card-text">Please join us for this Christmas Morning Eucharist service. Children are invited to bring a Christmas present to show the congregation.</p>
               </div>
             </div>
@@ -207,7 +207,7 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Sunday 28th December Time 10:15 PM - Parish Eucharist</h5>
+                <h5 class="card-title">Sunday 28th December Time 10:15 AM - Parish Eucharist</h5>
                 <p class="card-text">Please join us for this Parish Eucharist service.</p>
               </div>
             </div>
@@ -221,7 +221,7 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Sunday 4th January 2026, Time 10:15 PM - Three Kings Festival</h5>
+                <h5 class="card-title">Sunday 4th January 2026, Time 10:15 AM - Three Kings Festival</h5>
                 <p class="card-text">Please join us for this All Age service. Young people invited to dress up as a King or other member of the royal household.</p>
               </div>
             </div>
@@ -230,7 +230,7 @@
 
          
         
-      <p>Last updated: 18th December 2025 ASM</p>
+      <p>Last updated: 19th December 2025 ASM</p>
 
       </div>
     </div>
