--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Sunday 11th January 2026, Time 10:15 AM - Parish Eurcharist</h5>
+                <h5 class="card-title">Sunday 11th January 2026, Time 10:15 AM - Parish Eucharist</h5>
                 <p class="card-text">Please join us for this Parish Eurcharist service. Our primary style of service. The choir sings, we read the Bible, affirm our faith, pray and share Holy Communion together.</p>
               </div>
             </div>
@@ -263,7 +263,7 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Sunday 25th January 2026, Time 10:15 AM - Parish Eurcharist</h5>
+                <h5 class="card-title">Sunday 25th January 2026, Time 10:15 AM - Parish Eucharist</h5>
                 <p class="card-text">Please join us for this Parish Eurcharist service. Our primary style of service. The choir sings, we read the Bible, affirm our faith, pray and share Holy Communion together.</p>
               </div>
             </div>
