--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Sunday 18th January 10:15 AM - Matins</h5>
+                <h5 class="card-title">Sunday 18th January 2026 10:15 AM - Matins</h5>
                 <p class="card-text">This is a traditional worship service which is expressed in choral singing and led by the choir.</p>
               </div>
             </div>
