--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Sunday 4th January 2026, Time 10:15 AM - Three Kings Festival</h5>
+                <h5 class="card-title">Sunday 4th January 2026, Time 10:15 AM - Three Kings Festival (Epiphany Sunday)</h5>
                 <p class="card-text">Please join us for this All Age service. Young people are invited to dress up as a King or other member of the royal household.</p>
               </div>
             </div>
