--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <div class="col-md-8">
               <div class="card-body">
                 <h5 class="card-title">Sunday 24th December Time 3:30 PM - Crib Service</h5>
-                <p class="card-text">Please join us for this popular and family friendly crib service.  The service reenacts the Christmas story through narration, singing, and participation from children dressed in suitable costumes.</p>
+                <p class="card-text">Please join us for this popular and family friendly crib service.  The service reenacts the Christmas story through narration, singing, and participation from children dressed in appropriate costumes.</p>
               </div>
             </div>
           </div>
