--- a/index.html
+++ b/index.html
@@ -147,11 +147,11 @@
         <div class="card mb-3">
           <div class="row g-0">
             <div class="col-md-3">
-              <img src="img/Eucharist.png" class="img-fluid rounded" alt="image">
+              <img src="img/ConversionStPaul.jpeg" class="img-fluid rounded" alt="image">
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Sunday 25th January 2026, Time 10:15 AM - Parish Eucharist</h5>
+                <h5 class="card-title">Sunday 25th January 2026, Time 10:15 AM - Parish Eucharist - Conversion of St. Paul</h5>
                 <p class="card-text">Please join us for this Parish Eurcharist service. Our primary style of service. The choir sings, we read the Bible, affirm our faith, pray and share Holy Communion together.</p>
               </div>
             </div>
