--- a/index.html
+++ b/index.html
@@ -174,6 +174,20 @@
         <div class="card mb-3">
           <div class="row g-0">
             <div class="col-md-3">
+              <img src="img/AshWednesday.png" class="img-fluid rounded" alt="image">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Wednesday 18th February 7:30 PM - Ash Wednesday</h5>
+                <p class="card-text">Please join us for this Ash Wednesday service, with optional ashing.</p>
+              </div>
+            </div>
+          </div>
+        </div>         
+
+        <div class="card mb-3">
+          <div class="row g-0">
+            <div class="col-md-3">
               <img src="img/Eucharist.png" class="img-fluid rounded" alt="image">
             </div>
             <div class="col-md-8">
