--- a/index.html
+++ b/index.html
@@ -170,6 +170,20 @@
             </div>
           </div>
         </div>  
+
+        <div class="card mb-3">
+          <div class="row g-0">
+            <div class="col-md-3">
+              <img src="img/MessyChurch.jpg" class="img-fluid rounded" alt="image">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Sunday 22th February, Time 3:30 PM - Messy Church</h5>
+                <p class="card-text">Please join us for for Messy Church. Refreshments available from 3:15pm in church. Everyone welcome.</p>
+              </div>
+            </div>
+          </div>
+        </div>          
         
         <div class="card mb-3">
           <div class="row g-0">
