--- a/index.html
+++ b/index.html
@@ -279,8 +279,8 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Friday 3rd April, Time PM TBA - Good Friday</h5>
-                <p class="card-text">Good Friday commemoratess the crucifixion and death of Jesus Christ. On this most solemn day in Holy Week, we focus on sacrifice, atonement for sins and reflection.</p>
+                <h5 class="card-title">Friday 3rd April, Good Friday</h5>
+                <p class="card-text">Good Friday commemorates the crucifixion and death of Jesus Christ. On this most solemn day in Holy Week, we focus on sacrifice, atonement for sins and reflection. Please join us for Holy Communion from the Reserved Sacrament at 1:30pm, followed by the Last Hour from 2:00pm.</p>
               </div>
             </div>
           </div>
