--- a/contact-us.html
+++ b/contact-us.html
@@ -130,7 +130,7 @@
     <section class="jumbotron mt-3">
       <div class="container">
         <h1 class="jumbotron-heading">Contact Us</h1>
-        <p>Please use the contact form to get in touch.</p>
+        <p>To get in touch, please either use the contact form below or call the Vicarage on 01482 666677.</p>
       </div>
     </section>
 
