--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
               <div class="card-body">
                 <h5 class="card-title">Thursday 2nd April, Time TBA - Maundy Thursday</h5>
                 <p class="card-text">Maundy Thursday commemorates the Last Supper, where Jesus established the Eucharist, washed his disciples' feet and gave the "new commandment" to love one another.<br/>
-                Did you know that the word 'maundy' (MAWN-dee (/ˈmɔːn.di/) comes from the Latin word 'mandatum' - meaning 'commandment', in "Mandatum novum do vobis ut diligatis invicem sicut dilexi vos", ("A new commandment I give to you: That you love one another, as I have loved you.").</p><br/>
+                Did you know that the word 'maundy' pronounced MAWN-dee (/ˈmɔːn.di/) comes from the Latin word 'mandatum' - meaning 'commandment', in "Mandatum novum do vobis ut diligatis invicem sicut dilexi vos", ("A new commandment I give to you: That you love one another, as I have loved you.").</p><br/>
               
               </p>
               </div>
