--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Thursday 2nd April, Time TBA - Maundy Thursday</h5>
+                <h5 class="card-title">Thursday 2nd April, 7:00 PM - Maundy Thursday</h5>
                 <p class="card-text">Maundy Thursday commemorates the Last Supper, where Jesus established the Eucharist, washed his disciples' feet and gave the "new commandment" to love one another.<br/>
                 Did you know that the word 'maundy' pronounced MAWN-dee (/ˈmɔːn.di/) comes from the Latin word 'mandatum' - meaning 'commandment', in "Mandatum novum do vobis ut diligatis invicem sicut dilexi vos", ("A new commandment I give to you: That you love one another, as I have loved you.").</p><br/>
               
