--- a/index.html
+++ b/index.html
@@ -197,7 +197,22 @@
               </div>
             </div>
           </div>
-        </div>                    
+        </div>  
+        
+        <div class="card mb-3">
+          <div class="row g-0">
+            <div class="col-md-3">
+              <img src="img/WDP.png" class="img-fluid rounded" alt="image">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Friday 6th March, Time TBA PM - World Day of Prayer</h5>
+                <p class="card-text">World Day of Prayer is a global ecumenical movement led by Christian women
+who welcome you to join in prayer and action for peace and justice.  Please join us as we host the World Day of Prayer this year.</p>
+              </div>
+            </div>
+          </div>
+        </div>        
         
         <div class="card mb-3">
           <div class="row g-0">
