--- a/index.html
+++ b/index.html
@@ -142,7 +142,21 @@
             </div>
           </div>
         </div>          
-        
+
+        <div class="card mb-3">
+          <div class="row g-0">
+            <div class="col-md-3">
+              <img src="img/WednesdayPitstop.png" class="img-fluid rounded" alt="image">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Wednesday 25th February, 3:30 PM after school - Pit stop</h5>
+                <p class="card-text">If you have had a hard day at school, drop in at st. Helen's on your way home!</p>
+              </div>
+            </div>
+          </div>
+        </div>           
+
         <div class="card mb-3">
           <div class="row g-0">
             <div class="col-md-3">
