--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <div class="col-md-8">
               <div class="card-body">
                 <h5 class="card-title">Wednesday 25th February, 3:30 PM after school - Pit stop</h5>
-                <p class="card-text">If you have had a hard day at school, drop in at st. Helen's on your way home!</p>
+                <p class="card-text">If you have had a hard day at school, drop in at St. Helen's on your way home!</p>
               </div>
             </div>
           </div>
