--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ who welcome you to join in prayer and action for peace and justice.  Please join
         </div>             
 
         
-      <p>Last updated: 2nd February 2026 ASM</p>
+      <p>Last updated: 24th February 2026 ASM</p>
 
       </div>
     </div>
