--- a/index.html
+++ b/index.html
@@ -156,6 +156,20 @@
             </div>
           </div>
         </div>  
+
+        <div class="card mb-3">
+          <div class="row g-0">
+            <div class="col-md-3">
+              <img src="img/WednesdayPitstop.png" class="img-fluid rounded" alt="image">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Wednesday 4th March, 3:30 PM after school - Pit stop</h5>
+                <p class="card-text">If you have had a hard day at school, drop in at St. Helen's on your way home!</p>
+              </div>
+            </div>
+          </div>
+        </div>          
         
         <div class="card mb-3">
           <div class="row g-0">
@@ -184,7 +198,21 @@ who welcome you to join in prayer and action for peace and justice.  Please join
               </div>
             </div>
           </div>
-        </div>         
+        </div> 
+        
+        <div class="card mb-3">
+          <div class="row g-0">
+            <div class="col-md-3">
+              <img src="img/WednesdayPitstop.png" class="img-fluid rounded" alt="image">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Wednesday 11th March, 3:30 PM after school - Pit stop</h5>
+                <p class="card-text">If you have had a hard day at school, drop in at St. Helen's on your way home!</p>
+              </div>
+            </div>
+          </div>
+        </div> 
 
         <div class="card mb-3">
           <div class="row g-0">
@@ -203,6 +231,20 @@ who welcome you to join in prayer and action for peace and justice.  Please join
         <div class="card mb-3">
           <div class="row g-0">
             <div class="col-md-3">
+              <img src="img/WednesdayPitstop.png" class="img-fluid rounded" alt="image">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Wednesday 18th March, 3:30 PM after school - Pit stop</h5>
+                <p class="card-text">If you have had a hard day at school, drop in at St. Helen's on your way home!</p>
+              </div>
+            </div>
+          </div>
+        </div>         
+
+        <div class="card mb-3">
+          <div class="row g-0">
+            <div class="col-md-3">
               <img src="img/Eucharist.png" class="img-fluid rounded" alt="image">
             </div>
             <div class="col-md-8">
@@ -213,6 +255,20 @@ who welcome you to join in prayer and action for peace and justice.  Please join
             </div>
           </div>
         </div>  
+
+        <div class="card mb-3">
+          <div class="row g-0">
+            <div class="col-md-3">
+              <img src="img/WednesdayPitstop.png" class="img-fluid rounded" alt="image">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Wednesday 25th March, 3:30 PM after school - Pit stop</h5>
+                <p class="card-text">If you have had a hard day at school, drop in at St. Helen's on your way home!</p>
+              </div>
+            </div>
+          </div>
+        </div>         
 
         <div class="card mb-3">
           <div class="row g-0">
