--- a/index.html
+++ b/index.html
@@ -146,11 +146,11 @@
         <div class="card mb-3">
           <div class="row g-0">
             <div class="col-md-3">
-              <img src="img/All-Age.jpeg" class="img-fluid rounded" alt="image">
+              <img src="img/All-Age-GPT-Medium.jpeg" class="img-fluid rounded" alt="image">
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Sunday 1st March, Time 10:15 AM - Parish Eucharist</h5>
+                <h5 class="card-title">Sunday 1st March, Time 10:15 AM - All Age</h5>
                 <p class="card-text">This service has a more relaxed style and content, suitable for the whole family.</p>
               </div>
             </div>
