--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Friday 6th March, Time TBA PM - World Day of Prayer</h5>
+                <h5 class="card-title">Friday 6th March, Time 2:00 PM - World Day of Prayer</h5>
                 <p class="card-text">World Day of Prayer is a global ecumenical movement led by Christian women
 who welcome you to join in prayer and action for peace and justice.  Please join us as we host the World Day of Prayer this year.</p>
               </div>
