--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ who welcome you to join in prayer and action for peace and justice.  Please join
         <div class="card mb-3">
           <div class="row g-0">
             <div class="col-md-3">
-              <img src="img/EucharistGlass.png" class="img-fluid rounded" alt="image">
+              <img src="img/Eucharist2.png" class="img-fluid rounded" alt="image">
             </div>
             <div class="col-md-8">
               <div class="card-body">
